objects/ZACRObj2__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>ZACRObj2</label>
    <nameField>
        <label>ZACRObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZACRObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>